# song-manager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Controller.cpp  Controller.h  DynamicVector.h  Playlist.h  README.md  Repository.cpp  Repository.h  Song.cpp  Song.h  Tests.cpp  UI.cpp  UI.h  main.cpp
.github/workflows/: build.yml
src/: main.cpp
src/controller/: Controller.cpp  Controller.h
src/domain/: DynamicVector.h  FilePlaylist.h  JsonPlaylist.h  LinkedList.h  List.h  Playlist.cpp  Playlist.h  Song.cpp  Song.h
src/domain/action/: Action.h  AddAction.h  RemoveAction.h
src/domain/list/: DynamicVector.h  LinkedList.h  List.h
src/domain/playlist/: FilePlaylist.h  JsonPlaylist.h  Playlist.cpp  Playlist.h
src/repository/: Repository.cpp  Repository.h
src/ui/: UI.cpp  UI.h
test/: Tests.cpp  Tests.h  main.cpp
